infrastructure/kubernetes/unitgenius-gateway/unitgenius-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unitgenius-gateway-ingress
  namespace: unitgenius
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: unitgenius.cyberrytechnologies.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: unitgenius-gateway-service
            port:
              number: 80
